[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Pickups/PickupsCore.gd" type="Script" id=1]
[ext_resource path="res://Lib/FJ_LibHelper/PlatformBehavior2D/PlatformBehavior2D.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Blinking"
length = 0.06
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteMain:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="PickupsCore" type="KinematicBody2D" groups=["Pickups"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="PlatformBehavior" parent="." instance=ExtResource( 2 )]
WALK_SPEED = 0.0
VELOCITY_X_DAMPING = 1.0

[node name="SpriteMain" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteMain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollectArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea2D"]
shape = SubResource( 3 )

[node name="BlinkStartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DisappearAnimation" type="AnimationPlayer" parent="."]
anims/Disappearing = SubResource( 1 )

[node name="CollectedDeleteDelayTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="landed" from="PlatformBehavior" to="." method="_on_PlatformBehavior_landed"]
[connection signal="area_entered" from="CollectArea2D" to="." method="_on_CollectArea2D_area_entered"]
[connection signal="timeout" from="BlinkStartTimer" to="." method="_on_BlinkStartTimer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
[connection signal="timeout" from="CollectedDeleteDelayTimer" to="." method="_on_CollectedDeleteDelayTimer_timeout"]
